; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_malloc_hook.c_skynet_debug_memory.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_malloc_hook.c_skynet_debug_memory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"[:%08x] %s %p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @skynet_debug_memory(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  store i8* %0, i8** %2, align 8
  %5 = call i32 (...) @skynet_current_handle()
  store i32 %5, i32* %3, align 4
  %6 = call i64 (...) @malloc_current_memory()
  store i64 %6, i64* %4, align 8
  %7 = load i32, i32* @stderr, align 4
  %8 = load i32, i32* %3, align 4
  %9 = load i8*, i8** %2, align 8
  %10 = load i64, i64* %4, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = call i32 @fprintf(i32 %7, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %8, i8* %9, i8* %11)
  ret void
}

declare dso_local i32 @skynet_current_handle(...) #1

declare dso_local i64 @malloc_current_memory(...) #1

declare dso_local i32 @fprintf(i32, i8*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
